# feedback-loop

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
k8s/: deployment.yaml
rust-engine/: Cargo.toml  Dockerfile
rust-engine/proto/: vector_service.proto
rust-engine/src/: embeddings.rs  lib.rs  main.rs  search.rs
rust-engine/tests/: embedding_tests.rs
scripts/: index_docs.sh  setup.sh
services/: Dockerfile  go.mod
services/cmd/: main.go
services/examples/: cli_client.go  query_example.go
services/internal/api/: health_routes.go  rag_routes.go  testgen_routes.go
services/internal/cache/: cache.go
services/internal/config/: config.go
services/internal/langgraph/: agents.go  workflow.go
services/internal/llm/: gateway.go
services/internal/middleware/: auth.go  logging.go
services/internal/rag/: service.go  vector_client.go
services/internal/testgen/: enhanced_generator.go  generator.go  parser.go  templates.go  test_generator_test.go
