[package]
name = "vector-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
fastembed = "3.0"
qdrant-client = "1.8"
rayon = "1.8"
ndarray = "0.15"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "vector-engine"
path = "src/main.rs"
